src/components/Contact/contact.css
@import "../../css/text-styles.css";
@import "../../css/colors.css";
@import "../../css/breakpoints.css";

.contact {
    text-align: left;
    @mixin textStyleTitle;
    white-space: nowrap;
    background-color: var(--color-background-secondary);
}

.contact-primary-content {
    display: flex;
    justify-content: space-between;
    align-items: end;
    padding: 8px 16px 16px;
    flex-direction: row;
    flex-grow: 1;
}

.contact-image {
    max-width: 100%;
    object-fit: cover;
    object-position: top;
    width: 100%;
    max-height: 100%;
    aspect-ratio: 1;
}

.contact-social-links {
    line-height: 1;
}

.contact-social-links > * {
    margin-left: 8px;
}

.contact.contact--as-row {
    display: flex;
    justify-content: space-between;
    height: 128px;
}

.contact.contact--as-row .contact-image {
    width: auto;
}

.contact.contact--as-row .contact-social-links {
    padding-bottom: 8px;
}

.contact.contact--as-row .contact-primary-content {
    padding: 0 16px 0 8px;
}

.contact.contact--as-row .contact-details {
    align-self: start;
    padding: 8px 0 0 8px;
}

@media screen and (--sm) {
    .contact-primary-content {
        display: flex;
        justify-content: space-between;
        align-items: end;
        padding: 8px 16px 16px;
    }

    .contact.contact--as-row .contact-primary-content {
        flex-grow: 1;
        padding: 0 16px 0 8px;
    }
}

